[gd_scene load_steps=12 format=3 uid="uid://ctlf1dh5axxft"]

[ext_resource type="Script" path="res://scripts/crafting_table.gd" id="1_26yhg"]
[ext_resource type="Script" path="res://inventory/inventory_item.gd" id="2_w0248"]
[ext_resource type="Texture2D" uid="uid://cncmgmoyifqxs" path="res://Art/pot_organge.png" id="3_mt76g"]
[ext_resource type="Texture2D" uid="uid://cmt3sagwwgwyu" path="res://Art/pot_violet.png" id="4_esbwi"]
[ext_resource type="Texture2D" uid="uid://b3tprawkoqyo2" path="res://Art/pot_green.png" id="5_bcnld"]
[ext_resource type="PackedScene" path="res://scenes/crafting_ui.tscn" id="5_cyu27"]
[ext_resource type="Texture2D" uid="uid://coo7rd3b11g0r" path="res://Art/Crafting_Table.png" id="6_qxkah"]

[sub_resource type="Resource" id="Resource_e0655"]
script = ExtResource("2_w0248")
name = "orange pot"
texture = ExtResource("3_mt76g")

[sub_resource type="Resource" id="Resource_wyeu2"]
script = ExtResource("2_w0248")
name = "purple pot"
texture = ExtResource("4_esbwi")

[sub_resource type="Resource" id="Resource_ccl3i"]
script = ExtResource("2_w0248")
name = "green pot"
texture = ExtResource("5_bcnld")

[sub_resource type="CircleShape2D" id="CircleShape2D_faeyg"]
radius = 21.2132

[node name="crafting_table" type="Node2D"]
script = ExtResource("1_26yhg")
orangePot = SubResource("Resource_e0655")
purplePot = SubResource("Resource_wyeu2")
greenPot = SubResource("Resource_ccl3i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("6_qxkah")

[node name="crafting_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="crafting_area"]
shape = SubResource("CircleShape2D_faeyg")

[node name="crafting_ui" parent="." instance=ExtResource("5_cyu27")]
offset_left = -8.0
offset_top = -32.0
offset_right = 8.0
offset_bottom = -16.0

[connection signal="body_entered" from="crafting_area" to="." method="_on_crafting_area_body_entered"]
[connection signal="body_exited" from="crafting_area" to="." method="_on_crafting_area_body_exited"]
